2007-11-01  Michael Olson  <mwolson@gnu.org>

	* erc-compat.el (erc-set-write-file-functions): New compatibility
	function to set the write hooks appropriately.

	* erc-log.el (erc-log-setup-logging): Use
	erc-set-write-file-functions.  This fixes a byte-compiler warning.

	* erc-stamp.el: Silence byte-compiler warning about
	erc-fill-column.

	* erc.el (erc-with-all-buffers-of-server): Bind the result of
	mapcar to a variable in order to silence a byte-compiler warning.

2007-10-29  Michael Olson  <mwolson@gnu.org>

	* erc-ibuffer.el (erc-modified-channels-alist): Use
	eval-when-compile, and explain why we are doing this.

2007-10-25  Dan Nicolaescu  <dann@ics.uci.edu>

	* erc-ibuffer.el (erc-modified-channels-alist): Pacify
	byte-compiler.

2007-10-13  Glenn Morris  <rgm@gnu.org>

	* erc-track.el (erc-modified-channels-update): Use mapc rather
	than mapcar.

2007-10-12  Diane Murray  <disumu@x3y2z1.net>

	* erc.el (erc-join-channel): Prompt for channel key if C-u or
	another prefix-arg was typed.

	* NEWS: Noted this change.

2007-10-07  Michael Olson  <mwolson@gnu.org>

	* erc.el (erc-cmd-ME'S): New command that handles the case where
	someone types "/me's".  It concatenates the text " 's" to the
	beginning of the input and then sends the result like a normal
	"/me" command.
	(erc-command-regexp): Permit single-quote character.

2007-09-30  Aidan Kehoe  <kehoea@parhasard.net>  (tiny change)

	* erc-log.el (erc-save-buffer-in-logs): Prevent spurious warnings
	when looking at a log file and concurrently saving to it.

2007-09-18  Exal de Jesus Garcia Carrillo  <exal@gnu.org>  (tiny change)

	* erc.texi (Special-Features): Fix small typo.

2007-09-16  Michael Olson  <mwolson@gnu.org>

	* erc-track.el (erc-track-switch-direction): Mention
	erc-track-faces-priority-list.  Thanks to Leo for the suggestion.

2007-09-11  Exal de Jesus Garcia Carrillo  <exal@gnu.org>  (tiny change)

	* erc-sound.el: Fix typo in setting up instructions.
